--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     command: ["tail", "-f", "/dev/null"]
 
   mysql:
-    image: mysql:5.7
+    build: ./sql
     volumes:
       - db_data:/var/lib/mysql
     restart: always
