--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
   mysql:
     build: ./sql
     volumes:
+      - ./sql:/root/sql
       - db_data:/var/lib/mysql
     restart: always
     environment:
